* Javadoc, code, and test deprecation cleanup. Patch by Brad Clarke.
* New system property named "cruisecontrol.rmiport" set when -rmiport specified on the command line.
* Delete temp files created by tests (CC-344). Patch by Mark Doliner.
* Missing x10.jar origin in lib/readme.txt. Reported by Adrian Cho.

JabberPublisher:
----------------------
* Support setting different "service". (CC-346) Patch by Ahti Kitsik.

JMX interface:
----------------------
* When setting the configuration contents via JMX, the contents are validated (CC-333). Patch by Allan Wick.

MergeLogger:
----------------------
* cleanly skip non existing log files and directories

MKS:
----------------------
* Support archive filenames with spaces (CC-376). Patch by Martin Aberle.

NavigationTag:
----------------------
* Remove support for log files timestamped without a second part

Project:
----------------------
* Remove methods to get/set config file from Project and corresponding jmx interface classes
* ModificationSet is no longer a required element; when missing builds must be forced.
* Fix a testcase failure on MacOS X. Reported by Michael Kloss.
* Build after failed was not getting set properly. Patch by Brad Clarke.

ProjectConfig:
----------------------
* Validates subelements by calling their "validate()" methods.

Schedule:
----------------------
* Fix getTimeToNextBuild to adjust for daylight savings time (CC-104).

SfeeFrsPublisher:
----------------------
* A new publisher for uploading files to a SourceForge Enterprise Edition's File Release System.

SfeeTrackerPublisher:
----------------------
* A new publisher for creating a tracker artifact in a SourceForge Enterprise Edition project.
* Extracted XPathAwareChild and NamedXPathAwareChild to make usable by other plugins.

SfeeDocumentManagerPublisher:
----------------------
* A new publisher for creating a Document Manager entry in a SourceForge Enterprise Edition project.