@@ -83,6 +83,7 @@ general:
 * New system property named "cruisecontrol.rmiport" set when -rmiport specified on the command line.
 * Delete temp files created by tests (CC-344). Patch by Mark Doliner.
 * Missing x10.jar origin in lib/readme.txt. Reported by Adrian Cho.
+* Fixed project reloading so that changes to an existing project will be included when Cruise builds the next time. Paul Julius & Kent Spillner, pairing.
 
 JabberPublisher:
 ----------------------
